# QdrantBuddy

./: .gitignore  pyproject.toml
qdrantbuddy/: config.py
qdrantbuddy/.hydra-config/: config.yaml
qdrantbuddy/api/: main.py  routes.py
qdrantbuddy/crud/: __init__.py  crud.py
