[tool.poetry]
name = "qdrantbuddy"
version = "0.1.0"
description = "A lightweight API for managing CRUD operations in Qdrant vector databases with ease"
authors = ["htagourti <htagourti@linagora.com>"]
readme = "README.md"
packages = [{ include = "qdrantbuddy" }]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
filecatcher = {git = "https://github.com/OpenLLM-France/fileCatcher.git"}
python-multipart = "^0.0.17"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
